--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=management
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/tenant_management
+spring.datasource.username=postgres
+spring.datasource.password=sillicon
+
+#--------------------JPA-ORM Properties-----------------
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
