--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,12 @@
             <version>0.8.8</version>
             <type>maven-plugin</type>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
