Created Admin and Issue APIs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=management
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/tenant_management
 spring.datasource.username=postgres
-spring.datasource.password=sillicon
+spring.datasource.password=Wtrmln6
 #--------------------JPA-ORM Properties-----------------
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
